add new website from server na

--- a/xem-phim-bo/hau-phu-phu-nhan-khong-de-lam/index.html
+++ b/xem-phim-bo/hau-phu-phu-nhan-khong-de-lam/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1657,62 +1657,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/anh-hung-phuong-bac" title="Anh Hùng Phương Bắc">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anh-hung-phuong-bac-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Anh Hùng Phương Bắc
-            </span>
-            <span class="list-top-movie-item-en">
-             The Snow Queen
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lang-dien-ha" title="Lang điện hạ">
+          <a class="list-top-movie-link" href="/phim-moi/linh-thuy-danh-bo-6-chan-loi" title="Lính Thủy Đánh Bộ 6: Chặn Lối">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lang-dien-ha-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/linh-thuy-danh-bo-6-chan-loi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lang điện hạ
+             Lính Thủy Đánh Bộ 6: Chặn Lối
             </span>
             <span class="list-top-movie-item-en">
-             The Majesty of Wolf
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mien-dat-tot-lanh" title="Miền Đất Tốt Lành">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mien-dat-tot-lanh-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Miền Đất Tốt Lành
-            </span>
-            <span class="list-top-movie-item-en">
-             Goodland
+             The Marine 6: Close Quarters
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1723,21 +1679,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/trong-dau-toan-la-chuyen-toi-khong-the-yeu-duong" title="Trong đầu toàn là chuyện tôi không thể yêu đương">
+          <a class="list-top-movie-link" href="/phim-moi/101-chu-cho-dom" title="101 Chú Chó Đốm">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/trong-dau-toan-la-chuyen-toi-khong-the-yeu-duong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/101-chu-cho-dom-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Trong đầu toàn là chuyện tôi không thể yêu đương
+             101 Chú Chó Đốm
             </span>
             <span class="list-top-movie-item-en">
-             Midara na Ao-chan wa Benkyou ga Dekinai
+             101 Dalmatians
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1745,21 +1701,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dao-binh-cuoi-cung" title="Đạo Binh Cuối Cùng">
+          <a class="list-top-movie-link" href="/phim-moi/ban-sao-cua-quy" title="Bản Sao Của Quỷ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dao-binh-cuoi-cung-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ban-sao-cua-quy-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đạo Binh Cuối Cùng
+             Bản Sao Của Quỷ
             </span>
             <span class="list-top-movie-item-en">
-             The Last Legion
+             The Devil's Double
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/mighty-express-phan-7" title="Mighty Express (Phần 7)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mighty-express-phan-7-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Mighty Express (Phần 7)
+            </span>
+            <span class="list-top-movie-item-en">
+             Mighty Express (Season 7)
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/the-lake-phan-2" title="The Lake (Phần 2)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-lake-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             The Lake (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             The Lake (Season 2)
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
