add new website from server na

--- a/xem-phim-bo/con-trai-ban-me/index.html
+++ b/xem-phim-bo/con-trai-ban-me/index.html
@@ -1188,7 +1188,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             8
+             9
             </dd>
             <br/>
            </dl>
@@ -1658,62 +1658,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/end-of-days" title="End of Days">
+          <a class="list-top-movie-link" href="/phim-moi/redeem-team-doi-bong-ro-sieu-sao" title="Redeem Team: Đội bóng rổ siêu sao">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/end-of-days-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/redeem-team-doi-bong-ro-sieu-sao-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             End of Days
+             Redeem Team: Đội bóng rổ siêu sao
             </span>
             <span class="list-top-movie-item-en">
-             End of Days
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/neu-em-o-lai" title="Nếu Em Ở Lại">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/neu-em-o-lai-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nếu Em Ở Lại
-            </span>
-            <span class="list-top-movie-item-en">
-             If I Stay
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/quan-tro-than-tai" title="Quán Trọ Thần Tài">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quan-tro-than-tai-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Quán Trọ Thần Tài
-            </span>
-            <span class="list-top-movie-item-en">
-             Treasure Inn
+             The Redeem Team
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1724,21 +1680,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/star-trek-the-he-tiep-theo-phan-7" title="Star Trek: Thế hệ tiếp theo (Phần 7)">
+          <a class="list-top-movie-link" href="/phim-moi/cuoc-song-tuoi-dep" title="Cuộc Sống Tươi Đẹp">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/star-trek-the-he-tiep-theo-phan-7-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-song-tuoi-dep-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Star Trek: Thế hệ tiếp theo (Phần 7)
+             Cuộc Sống Tươi Đẹp
             </span>
             <span class="list-top-movie-item-en">
-             Star Trek: The Next Generation (Season 7)
+             Life Is Beautiful
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1746,21 +1702,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thang-ran" title="Thang rắn">
+          <a class="list-top-movie-link" href="/phim-moi/ke-hoach-tinh-yeu-phan-3" title="Kế hoạch tình yêu (Phần 3)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thang-ran-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-hoach-tinh-yeu-phan-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thang rắn
+             Kế hoạch tình yêu (Phần 3)
             </span>
             <span class="list-top-movie-item-en">
-             Snakes &amp; Ladders
+             The Hook Up Plan (Season 3)
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tinh-yeu-cua-ong-chu-phan-2" title="Tình yêu của ông chú (Phần 2)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-yeu-cua-ong-chu-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tình yêu của ông chú (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Ossan's Love (Season 2)
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ke-du-hanh-phan-1" title="Kẻ du hành (Phần 1)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-du-hanh-phan-1-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Kẻ du hành (Phần 1)
+            </span>
+            <span class="list-top-movie-item-en">
+             Travelers (Season 1)
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
