add new website from server na

--- a/xem-phim-bo/thieu-nien-bach-ma-tuy-xuan-phong/index.html
+++ b/xem-phim-bo/thieu-nien-bach-ma-tuy-xuan-phong/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1655,18 +1655,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/riddick-thong-linh-bong-toi" title="Riddick: Thống lĩnh bóng tối">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-mandalore" title="Người Mandalore">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/riddick-thong-linh-bong-toi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-mandalore-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Riddick: Thống lĩnh bóng tối
+             Người Mandalore
             </span>
             <span class="list-top-movie-item-en">
-             Riddick
+             The Mandalorian
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1677,18 +1677,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/su-tro-lai-cua-cac-ngoi-sao" title="Sự Trở Lại Của Các Ngôi Sao">
+          <a class="list-top-movie-link" href="/phim-moi/the-gioi-otomegame-that-khac-nghiet-voi-nhan-vat-quan-chung" title="Thế Giới Otomegame Thật Khắc Nghiệt Với Nhân Vật Quần Chúng">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-tro-lai-cua-cac-ngoi-sao-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-gioi-otomegame-that-khac-nghiet-voi-nhan-vat-quan-chung-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sự Trở Lại Của Các Ngôi Sao
+             Thế Giới Otomegame Thật Khắc Nghiệt Với Nhân Vật Quần Chúng
             </span>
             <span class="list-top-movie-item-en">
-             Return Of The Lucky Stars
+             乙女ゲー世界はモブに厳しい世界です
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1699,21 +1699,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/com-tot-com-xau-2" title="Cớm Tốt, Cớm Xấu 2">
+          <a class="list-top-movie-link" href="/phim-moi/toi-yeu-vuon-hoa-hong" title="Tôi Yêu Vườn Hoa Hồng">
            <span class="status">
-            HD Vietsub
+            HD Lồng Tiếng
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/com-tot-com-xau-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/我愛玫瑰園-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cớm Tốt, Cớm Xấu 2
+             Tôi Yêu Vườn Hoa Hồng
             </span>
             <span class="list-top-movie-item-en">
-             Bon Cop Bad Cop 2
+             Be My Guest
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1721,43 +1721,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thien-dia-hung-tam" title="Thiên Địa Hùng Tâm">
+          <a class="list-top-movie-link" href="/phim-moi/lam-hoa-diet-quy-phan-3" title="Lam Hỏa Diệt Quỷ (Phần 3)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thien-dia-hung-tam-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lam-hoa-diet-quy-phan-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thiên Địa Hùng Tâm
+             Lam Hỏa Diệt Quỷ (Phần 3)
             </span>
             <span class="list-top-movie-item-en">
-             Thiên Địa Hùng Tâm
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tro-dua-tre-con" title="Trò Đùa Trẻ Con">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tro-dua-tre-con-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Trò Đùa Trẻ Con
-            </span>
-            <span class="list-top-movie-item-en">
-             Childish Games
+             Blue Exorcist Season 3
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/scott-pilgrim-chong-lai-ca-the-gioi" title="Scott Pilgrim Chống Lại Cả Thế Giới">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/scott-pilgrim-chong-lai-ca-the-gioi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Scott Pilgrim Chống Lại Cả Thế Giới
+            </span>
+            <span class="list-top-movie-item-en">
+             Scott Pilgrim vs. the World
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
