add new website from server na

--- a/xem-phim-bo/phat-ngoc-yen/index.html
+++ b/xem-phim-bo/phat-ngoc-yen/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1707,21 +1707,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vong-lua-hoa-hong" title="Vòng Lửa Hoa Hồng">
+          <a class="list-top-movie-link" href="/phim-moi/not-tram-doi-bac-si" title="Nốt Trầm Đời Bác Sĩ">
            <span class="status">
-            HD Lồng Tiếng
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vong-lua-hoa-hong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/not-tram-doi-bac-si-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vòng Lửa Hoa Hồng
+             Nốt Trầm Đời Bác Sĩ
             </span>
             <span class="list-top-movie-item-en">
-             Vòng Lửa Hoa Hồng
+             Doctor Slump
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1729,21 +1729,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/yellowstone" title="Yellowstone">
+          <a class="list-top-movie-link" href="/phim-moi/the-gioi-moi" title="Thế Giới Mới">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/yellowstone-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-gioi-moi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Yellowstone
+             Thế Giới Mới
             </span>
             <span class="list-top-movie-item-en">
-             Yellowstone
+             Brave New World
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1751,18 +1751,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/frantz" title="Frantz">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-phai-di-sao" title="Người Phải Đi Sao?">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/frantz-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-phai-di-sao-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Frantz
+             Người Phải Đi Sao?
             </span>
             <span class="list-top-movie-item-en">
-             Frantz
+             Must You Go?
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1773,21 +1773,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tet-o-lang-dia-nguc" title="Tết Ở Làng Địa Ngục">
+          <a class="list-top-movie-link" href="/phim-moi/dai-hoi-the-thao-cua-nguoi-khong-lo-ti-hon" title="Đại Hội Thể Thao Của Người Khổng Lồ Tí Hon">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tet-o-lang-dia-nguc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dai-hoi-the-thao-cua-nguoi-khong-lo-ti-hon-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tết Ở Làng Địa Ngục
+             Đại Hội Thể Thao Của Người Khổng Lồ Tí Hon
             </span>
             <span class="list-top-movie-item-en">
-             Hellbound Village
+             Đại Hội Thể Thao Của Người Khổng Lồ Tí Hon
             </span>
             <span class="list-top-movie-item-view">
-             13 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1795,18 +1795,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tinh-yeu-lon-phan-2" title="Tình Yêu Lớn (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/tieu-thuyet-kinh-di" title="Tiểu Thuyết Kinh Dị">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-yeu-lon-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tieu-thuyet-kinh-di-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tình Yêu Lớn (Phần 2)
+             Tiểu Thuyết Kinh Dị
             </span>
             <span class="list-top-movie-item-en">
-             Big Love (Season 2)
+             Inside: A Chinese Horror Story
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
